# Djinn-pmarket

./: .dockerignore  .gitignore  .mcp.json  APP_FLOW.md  ARCHITECTURE.md  BACKEND_STRUCTURE.md  BUILD_SUCCESS.md  CHANGES_SUMMARY.md  CLAUDE.md  CONTRACT_ARCHITECTURE_VERIFICATION.md  CRITICAL_FIXES_V2.md  DEADLOCK_SOLUTION.md  DEBUGGING_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_NOW.md  Dockerfile  EXPLICACION_PHANTOM.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  LEGAL_DISCLAIMER.md  MACOS_FIX.md  MIGRATION_GUIDE_SUPABASE.md  NUCLEAR_OPTIONS_MACOS.md  NUEVA_ARQUITECTURA.md  PHANTOM_SPL_UPGRADE_COMPLETE.md  PRD.md  PRODUCTION_READINESS.md  PROJECT_STATUS_HANDOFF.md  QUICK_START.md  README.md  RUST_ANCHOR_FIX.md  SELL_UI_FIX.md  STRESS_TEST_RESULTS.md  SYNC_CHANGES.md  SYNC_COMPLETE.md  TECH_STACK.md  (+39 more)
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/activity/: page.tsx
app/admin/: page.tsx
app/bets/: page.tsx
app/bots/: page.tsx
components/: AchievementToast.tsx  ActivityFeedModal.tsx  AnimatedNumber.tsx  CandleChart.tsx  CategoryCarousel.tsx  CategoryMegaMenu.tsx  ChartDebugHelper.tsx  ClaimButton.tsx  ClaimUsernameModal.tsx  CreateMarketModal.tsx  CustomWalletModal.tsx  DjinnChart.tsx  EarningsTicketModal.tsx  Footer.tsx  Galaxy.css  Galaxy.tsx  GlareHover.css  GlareHover.tsx  GlobalActivityFeed.tsx  GlobalSearch.tsx  Hero.tsx  HoldingsPanel.tsx  HowItWorksModal.tsx  ImageCropper.tsx  Lanyard.css  Lanyard.tsx  LavaLampBackground.tsx  LayoutWrapper.tsx  LiveTicker.tsx  LostSOLLeaderboard.tsx  MarketCard.tsx  MarketStatusBadge.tsx  MiniProbabilityChart.tsx  Navbar.tsx  OnboardingModal.tsx  PhysicsCard.tsx  PhysicsCardBubblegum.tsx  PrismaticBurst.css  PrismaticBurst.tsx  PrizePoolCounter.tsx  (+17 more)
hooks/: useBinancePrice.ts  useCerberusTrigger.ts  useChronosProgram.ts  useDjinnProtocol.ts  useMarketData.ts  useRealtimeChart.ts  useSocialShare.ts  useWalletConnection.ts
lib/: AchievementContext.tsx  CategoryContext.tsx  ModalContext.tsx  PriceContext.tsx  SyncQueue.ts  TransactionConfirmationService.ts  core-amm.ts  ipfs.ts  market-colors.ts  oracles.ts  program-config.ts  program.ts  supabase-db.ts  supabase-retry.ts  supabase.ts  token-utils.ts  utils.ts  whitelist.ts
programs 2/djinn-market/: Anchor.toml  Cargo.toml  fix-and-build.sh  nuclear-build-no-idl.sh  test_results.txt
programs 2/djinn-market/.cargo/: config.toml
programs 2/djinn-market/programs/djinn-market/: Cargo.toml
programs 2/djinn-market/programs/djinn-market/src/: lib.rs
programs 2/djinn-market/scripts/: verify_devnet.ts
programs 2/djinn-market/tests/: djinn-market.ts  verification_test.ts
programs/djinn-market/: Anchor.toml  Cargo.toml  nuclear-build-incremental.sh  nuclear-build-rust-179.sh  package-lock.json  package.json  verify-setup.sh
programs/djinn-market/programs/djinn-market/: Cargo.toml
programs/djinn-market/programs/djinn-market/src/: chronos_market.rs  lib.rs  lib.rs.backup
programs/djinn-market/tests/: advanced_security.ts  armageddon.ts  djinn-market.ts  elite_security.ts  final_audit.ts  genesis.ts  hacker_lab.ts  simulation_economics.ts  stress.ts  viral_simulation.ts
public/: health.txt  manifest.json
scripts/: add-achievements.sql  atomic-reset.sql  atomic-reset.ts  calc_all_discriminators.js  calculate-moonshot-potential.ts  check-anchor.ts  cleanup-markets.ts  cleanup.ts  docker-build.sh  find-anchor-3k-mcap.ts  find-optimal-anchor.ts  find-perfect-combo.ts  fix-schema.sql  indexer.ts  initialize-v2.ts  keeper_bot.ts  market_realism_test.ts  oracle-bridge.ts  purge_cerberus.sh  remove_bg.py  remove_bg_v2.py  reproduce-curve.ts  reset-profiles.ts  run-cerberus.ts  run-indexer.sh  simulate-realistic.ts  simulate-trade.ts  simulate.ts  simulate_curve_v2.ts  simulation-REALISTIC-volumes.ts  simulation-complete-3scenarios.ts  solvency-simulation.py  stress_test.ts  stress_test_curve.ts  test-gemini.js  test-openai.js  test-profiles.ts  verify-curve.ts  verify-flow.ts  verify_init_draft.ts  (+2 more)
tests/: comprehensive-market-test.ts  detailed-hodler-simulation.ts  money-flow-test.ts  solvency-resolution-test.ts  stress_simulation.ts  trading-before-resolution.ts
utils/: bs58-compat.ts  chartHelpers.ts  dataTransformers.ts
(+109 files in other folders)
