[workspace]
members = [
    "programs/djinn-market",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Force wit-bindgen to 0.51.0 using our local shim to bypass edition 2024 error
wit-bindgen = { path = "./deps/wit-bindgen" }
spl-token-2022 = { path = "./deps/spl-token-2022" }
