[package]
name = "djinn-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "djinn_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
# DISABLE default features (which include metadata) to avoid version conflict
# MANUALLY enable token and associated_token
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"], default-features = false }

rmp-serde = "=1.3.0"
rmp = "=0.8.14"
blake3 = "=1.5.0"
indexmap = "=2.0.0"
constant_time_eq = "=0.3.0"

# STRICT PINS to avoid Solana 2.0 drift
solana-program = "=1.17.31"
spl-token = "=4.0.0" 
spl-associated-token-account = "=1.1.3"