[package]
name = "djinn-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "djinn_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["metadata"] }
mpl-token-metadata = "1.13.1"
rmp-serde = "=1.3.0"
rmp = "=0.8.14"
borsh = "=0.10.3"
borsh-derive = "=0.10.3"
blake3 = "=1.5.1"
solana-program = "=1.16.27"
uint = "0.9.5"